amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  FIX: CollectionBrowser was broken, when amaroK was running "localized".
  FIX: TitleProxy hogging 100% CPU when unable to connect to server.
  CHG: Bumped GStreamer requirement to 0.8.1.
  ADD: Glowing player window icons.
  ADD: amaroK finally remembers if it was hidden on exit.
  ADD: OSDPreview now has snap to regions.
  FIX: Newly shown columns in playlist can now be resized.
  FIX: BR 82020: next/prev buttons disabled when they shouldn't be.
  ADD: ToolbarAnalyzer remembers it's framerate, allowed fps: {50, 40, 30, 20}.
  ADD: Full streaming audio support for GStreamer engine.
  FIX: Don't allow user to get into a situation where there is no Menu.
  ADD: Using Welcome-page power-links you can switch between XMMS and amaroK mode.
  CHG: New icons and splash screen, by Roman Becker <roman@formmorf.de>.
  ADD: Allow the current GL analyzer to be detached/attached from the
       main window with the 'd' key.
  FIX: Filtering the collection now searches the second category, too (BR 81681).
  FIX: Filter in playlist was only working for the first argument.
  CHG: Collection-Monitor now processes removed dirs in a thread.
  ADD: Added a switch to toggle OSD's text-shadow. (BR 82011).
  ADD: More detailed track information dialog for Collection Browser.
  FIX: Track length was always 0 for certain filetypes (e.g. mod, wav) (BR 82673).
  FIX: Gst engine refusing to add certain filetypes to the playlist, when
       the engine was idle (BR 82713).
  FIX: Rare playlist redraw bug, which resulted in messed up items.

VERSION 1.0-beta4:
  ADD: CollectionDB now caches and rescales images. This binds cover art usage
       in amaroK to the collection, but offers greatly improved speed for cover
       retrieval and uses less memory.
  FIX: Cover not shown in ContextBrowser, when song gets played for the first
       time ever (BR 81241).